--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,41 @@
-.nav{
-  list-style-type: none;
+/* FOOTER */
+.page-footer{
+  background-color: rgb(255, 215, 0);
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 126px;
+  -webkit-box-shadow: 0px -6px 6px 0px rgba(255,191,0,1);
+  -moz-box-shadow: 0px -6px 6px 0px rgba(255,191,0,1);
+  box-shadow: 0px -6px 6px 0px rgba(255,191,0,1);
+  
+}
+/* SOCIAL BUTTONS */
+.facebook, .linkedin{
+  color: rgb(0, 0, 139);
+}
+
+.twitter{
+  color:rgb(1, 1, 253);
+}
+
+.youtube{
+  color:rgb(248, 4, 4);
+}
+
+.instagram{
+  color:rgb(221, 17, 136);
+}
+
+.facebook,.linkedin,.instagram,.youtube,.twitter{
+  font-weight: bold;
+  font-size: 22px;
+} 
+
+.facebook:hover,.linkedin:hover,.instagram:hover,.youtube:hover,.twitter:hover{
+  color: black;
+}
+
+.pink{
+  color: #f65454;
 }
