--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,6 @@
-<<<<<<< HEAD
 /* FOOTER */
 .page-footer{
   background-color: rgb(255, 215, 0);
-  position: absolute;
-  bottom: 0px;
   width: 100%;
   height: 126px;
   -webkit-box-shadow: 0px -6px 6px 0px rgba(255,191,0,1);
@@ -39,19 +36,20 @@
 
 .pink{
   color: #f65454;
-=======
+}
 .container_inicio {
-    display: block;
+display: block;
     margin: 4em 2em;
 }
 .logo {
-        display: flex;
-        height: 3em;
+  display: flex;
+  height: 3em;
 }
 
 .navbar {
     font-family: 'Montserrat', sans-serif;
     justify-content: flex-end;
+    
 }
 
 .navbar-collapse {
@@ -88,5 +86,6 @@
  }
 .nav{
   list-style-type: none;
->>>>>>> ee55d3650a46a78c215e49e08b0bea1ed0d5eaa1
 }
+
+
