--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,8 @@
 .pink{
   color: #f65454;
 }
+
+
 .container_inicio {
 display: block;
     margin: 4em 2em;
@@ -72,21 +74,23 @@ display: block;
     margin: 1em auto;
 }
 
-.motto h2{
+.motto h2 {
     display: flex;
     justify-content: center;
     font-size: 1.7em
     width: 75%;
 }
- h2{
+ h2 {
     color: rgb(160, 50, 31);
     margin: 1em auto;
     font-weight: 2000;
     font-family: 'Cedarville Cursive', cursive;
  }
-.nav{
+.nav {
   list-style-type: none;
 }
+
+/* CARDS ROUTES */
 
 .container_routes1{
   border: 1px solid black;
@@ -105,7 +109,7 @@ display: block;
 }
 
 .card{
-  height: 415px;
+  height: 32rem;
   justify-content: space-evenly;
 }
 
@@ -115,8 +119,63 @@ display: block;
 
 .card h5{
   font-family: 'Cedarville Cursive', cursive;
+  
 }
 
 .routes_title_subtitle{
+  margin: 3em 2em 2em 2em;
   
+}
+
+/* HORIZONTAL CARDS RECIPES */
+
+.recipes_title_subtitle {
+  margin: 3em 2em 2em 2em;
+}
+
+.horizontal_recipe_card {
+  display: flex;
+  flex-direction: row;
+  border: 1px solid black;
+  height: 16rem;
+  width: 50rem;
+  justify-content: space-between;
+  margin: 0 2rem;
+}
+
+.img_part { 
+  border: 1px solid black;
+  width: 15rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.recipe_pic {
+  border: 1px solid black;
+  width: 12rem;
+  
+  
+}
+
+.description_part {
+  border: 1px solid black;
+  display: inline-flex;
+  width: 34rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end
+}
+
+.btn {
+  background-color: rgb(255, 230, 0);
+  color: brown;
+  
+  border: rgb(255, 230, 0);
+}
+
+.btn:hover {
+  background-color: brown;
+  color: rgb(255, 230, 0)
 }
