--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ display: block;
 .motto h2 {
     display: flex;
     justify-content: center;
-    font-size: 1.7em
+    font-size: 1.7em;
     width: 75%;
 }
  h2 {
@@ -140,50 +140,67 @@ display: block;
   margin: 0 1.2em;
 }
 
-
-.horizontal_recipe_card {
+.recipes_list {
   display: flex;
   flex-direction: row;
-  border: 1px solid black;
-  height: 16rem;
-  width: 50rem;
-  justify-content: space-between;
-  margin: 0 2rem 2rem 0.5rem;
+  flex-wrap: wrap;
 }
 
-.img_part { 
+li {
+  list-style: none;
+  display: inline-block;
+  width: calc(100% / 4);
+  height: 2em;
+  text-align: left;
+}
+
+/*declare a css grid, set width and height of the container, name cells*/
+.horizontal_recipe_card {
+  display: grid;
+  margin: 1.5rem;
+  width: 75vw;
+  height: 45vh;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas: 
+    "image image image text text ."
+    "image image image text text link"
+    "image image image text text .";
   border: 1px solid black;
-  width: 15rem;
+  
+}
+
+/*declare section of the grid dedicated to image*/
+.img_part { 
+  grid-area: image;
+  border: 1px solid black;
+  justify-self: stretch;
+}
+
+/*with > select child of the image div, and set sizing properties*/
+.img_part > img {
+    padding: 1rem;
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+}
+
+/*the below assigns a section of the grid to each element, one for the text area, the other one for the link*/
+.description_part {
+  grid-area: text;
+  border: 1px solid black;
+  text-align: center;
+}
+
+.recipe_link {
+  grid-area: link;
+  text-align: right;
   display: flex;
   justify-content: center;
-  align-items: center;
-
 }
 
-.recipe_pic {
-  border: 1px solid black;
-  width: 13rem;
+#link {
   
+  color: rgb(185, 56, 34);
   
-}
-
-.description_part {
-  border: 1px solid black;
-  display: inline-flex;
-  width: 34rem;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end
-}
-
-.btn {
-  background-color: rgb(255, 230, 0);
-  color: brown;
-  
-  border: rgb(255, 230, 0);
-}
-
-.btn:hover {
-  background-color: brown;
-  color: rgb(255, 230, 0)
 }
