--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
   background-color: white;
   width: 100%;
   height: 126px;
+  margin-top:45px;
 }
+
+
 /* SOCIAL BUTTONS */
 
 .facebook, .linkedin{
@@ -42,6 +45,9 @@
 .pink{
   color: #f65454;
 }
+
+
+
 /* NAVBAR */
 .container_inicio {
 display: block;
@@ -170,11 +176,12 @@ small{
   text-align: center;
 }
 
-.btn {
+
+.btn{
   background-color: rgb(255, 230, 0);
   color: brown;
-  margin-left: 150px;
   border: rgb(255, 230, 0);
+ 
 }
 
 .btn:hover {
@@ -190,7 +197,5 @@ small{
 }
 
 #link {
-  
   color: rgb(185, 56, 34);
-  
 }
