--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,33 @@
 /* FOOTER */
 .page-footer{
-  background-color: white;
+  background-color:#f8f9fa;
   width: 100%;
   height: 126px;
-  
-  
 }
+/* FOOTER */
+
 /* SOCIAL BUTTONS */
-.facebook, .linkedin{
-  color: rgb(0, 0, 139);
+.facebook,.linkedin,.twitter,.youtube,.instagram,.github{
+  color: rgb(247, 205, 79);
 }
 
-.twitter{
-  color:rgb(1, 1, 253);
-}
-
-.youtube{
-  color:rgb(248, 4, 4);
-}
-
-.instagram{
-  color:rgb(221, 17, 136);
-}
-
-.facebook,.linkedin,.instagram,.youtube,.twitter{
+.facebook,.linkedin,.instagram,.youtube,.twitter,.github{
   font-weight: bold;
   font-size: 22px;
 } 
 
-.facebook:hover,.linkedin:hover,.instagram:hover,.youtube:hover,.twitter:hover{
+.facebook:hover,.linkedin:hover,.instagram:hover,.youtube:hover,.twitter:hover,.github:hover{
   color: black;
 }
+
 
 .pink{
   color: #f65454;
 }
+/* SOCIAL BUTTONS */
+
+
+
 
 
 .container_inicio {
@@ -75,8 +68,7 @@ display: block;
 .motto h2 {
     display: flex;
     justify-content: center;
-    font-size: 1.7em;
-    width: 75%;
+    
 }
  h2 {
     color: rgb(160, 50, 31);
