--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ h4 {
   grid-template-areas: 
     "image image text text text ."
     "image image text text text ."
-    "image image text text text link";
+    "image image icons icons icons link";
   border: 1px rgba(243, 184, 184, 0.603);
   box-shadow: 10px 10px 23px -8px rgba(194,194,194,0.62);
 }
@@ -233,6 +233,19 @@ h4 {
   
 }
 
+/* icons cooking */
+.cook_icons {
+  grid-area: icons;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+
+.cook_icons img{
+  margin: 1rem;
+  width: 1rem;
+}
 
 /* FLIP CARD */
 .flip-card {
@@ -268,48 +281,161 @@ h4 {
 
 /* Style the back side */
 .flip-card-back {
-  background-color: rgb(255, 214, 30);
-  color: white;
+  background-color: rgb(255, 229, 111);
+  color: rgb(37, 37, 37);
   transform: rotateX(180deg);
   display: flex;
+  border: 1px rgba(243, 184, 184, 0.603);
+
 
 }
 
 /* Back side divided in two blocks: left and right */
-.left_block {
-  display: inline-flex;
+.left_text {
   flex-direction: column;
-  margin: 0 1.2em;
-  width: 20%;
-}
-
-.title_back {
-  display: flex;
-  margin: 0 1.2em;
-  align-self: left;
-}
-
-.ingredients {
-  font-family: 'Cardo', serif;
-  font-size: 1em;
-  text-align: justify;
-  align-self: left;
-
-}
-
-.flip-card-back h3 {
-font-size: 1.2em;
-}
-
-.flip-card-back h4 {
+  grid-area: text1;
+  border: 1px solid rgba(204, 204, 204, 0.137);
   text-align: left;
-  font-size: 1.5em;
+  width: 25%;
+  margin: 0 1.2em;
+  font-family: 'Cardo', serif;
+  margin: 1em 0.5em 1em 2em;
   }
 
-.right_block{
+.ingredients_list {
   font-family: 'Cardo', serif;
+  font-size: 0.85em;
+  list-style: square;
+  margin: 1.2em 0.2em 1em 0;
+}
+.left_text h4{
+  font-size: 1.5em;
+}
+
+.right_text {
+  margin: 1.5em 2em 1em 0;
+  display: flex;
+  flex-direction: column;
+  width: 65%;
+  font-family: 'Cardo', serif;
+  color: black;
   font-size: 0.8em;
   text-align: justify;
-  margin: 1.2em;;
+  align-self: right;
+}
 
+.right_text h5 {
+  color: rgb(66, 66, 66);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bolder;
+  font-size: 1.2em;
+  align-self: center;
+  margin-left: 0.2em;
+}
+
+
+/* responsive cards */
+
+@media screen and (max-width: 767px) {
+  .flip-card{
+    margin-left: 2.8%;
+    margin-top: 3%;
+    width: 46%;
   }
+  .horizontal_recipe_card {
+    height: 285px;
+  }
+  .flip-card:last-child {
+    margin-bottom: 3%;
+  }
+  .description_part p {
+    visibility: hidden;
+  }
+  .cook_icons {
+    visibility: hidden;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .flip-card {
+    width: 94.5%;
+  }
+  .horizontal_recipe_card  {
+    height: 260px;
+  }
+  .description_part p {
+    visibility: hidden;
+  }
+  .cook_icons {
+    visibility: hidden;
+  }
+}
+
+#contact {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin-right: 30%;
+    margin-top: 20%;
+    margin-bottom: 20%;
+}
+
+
+form {
+    /* center contact form */
+    margin: 0 auto;
+    /*define a flex box for the contact form, vertical direction */ 
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+
+    /* vw is used to allow re-sizing of the contact form depending on the size of the screen used */
+    width: 40vw;
+    height: auto;
+    background: #ffffff;
+    color: #000000;
+
+    border-radius: 10px;
+    box-shadow: 0 0 20px -10px #000;
+    padding: 2rem 3rem;}
+
+.form h2{
+  font-family: 'Cardo', serif;
+  margin: 0 auto;
+  padding-bottom: 1rem;
+  width: fit-content;
+  color: #3a3a3a;
+}
+
+.form > label {
+    font-family: 'montserrat';
+    margin: auto;
+}
+
+label{
+  font-family: 'montserrat';
+}
+
+input{
+  font-family: 'montserrat';
+  width: 100%;
+  padding: 1rem;
+  background: none;
+  outline: none;
+  resize: none;
+  border: 0;
+  transition: all .3s;
+  border-bottom:2px solid #bebed2
+}
+
+input:focus{
+  border-bottom: 2px solid #78788c
+}
+
+
+.container_contact {
+  display: flex;
+  justify-content: center;
+}
