--- a/css/style.css
+++ b/css/style.css
@@ -127,18 +127,25 @@ h4 {
   color: black;
   margin: 1em auto;
   font-weight: bold;
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-size: 20px;
   color: rgb(82, 79, 79);
 }
 
 .h2_javi{
-  color:rgb(160, 50, 31);
+  color: rgb(160, 50, 31);
   margin-top: 40px;
   font-family: 'Cedarville Cursive', cursive;
   font-weight: bold;
   margin-left: 0px;
-  margin-top: 113px;
+  margin-top: 104px;
+  font-size: 43px;
+  margin-bottom: 10px;
+}
+
+.h2_index{
+  margin-left: 195px;
+
 }
 
 .p_javi{
